Changes
=======

All issue numbers are relative to https://github.com/Toblerity/Fiona/issues.

1.8b1 (2018-10-15)
------------------

Bug fixes:

- Migrated unittest test cases in test_collection.py and test_layer.py to the
  use of the standard data_dir and path_coutwildrnp_shp fixtures (#616).
- Root logger configuration has been removed from all test scripts (#615).
- An AWS session is created for the CLI context Env only if explicitly
  requested, matching the behavior of Rasterio's CLI (#635).
- Dependency on attrs is made explicit.
- Other dependencies are pinned to known good versions in requirements files.

1.8a3 (2018-10-01)
------------------

Bug fixes:

- The Collection class now filters log messages about skipped fields to
  a maximum of one warning message per field (#627).
- The boto3 module is only imported when needed (#507, #629).
- Compatibility with Click 7.0 is achieved (#633).
- Use of %r instead of %s in a debug() call prevents UnicodeDecodeErrors
  (#620).

1.8a2 (2018-07-24)
------------------

New features:

- 64-bit integers are the now the default for int type fields (#562, #564).
- 'http', 's3', 'zip+http', and 'zip+s3' URI schemes for datasets are now
  supported (#425, #426).
- We've added a ``MemoryFile`` class which supports formatted in-memory
  feature collections (#501).
- Added support for GDAL 2.x boolean field sub-type (#531).
- A new ``fio rm`` command makes it possible to cleanly remove multi-file
  datasets (#538).
- The geometry type in a feature collection is more flexible. We can now
  specify not only a single geometry type, but a sequence of permissible types,
  or "Any" to permit any geometry type (#539).
- Support for GDAL 2.2+ null fields has been added (#554).
- The new ``gdal_open_vector()`` function of our internal API provides much
  improved error handling (#557).

Bug fixes:

- The bug involving OrderedDict import on Python 2.7 has been fixed (#533).