@@ -11,3 +11,4 @@ cdef OGRErr gdal_rollback_transaction(void *cogr_ds)
 cdef OGRFieldSubType get_field_subtype(void *fielddefn)
 cdef void set_field_subtype(void *fielddefn, OGRFieldSubType subtype)
 cdef bint check_capability_create_layer(void *cogr_ds)
+cdef void *get_linear_geometry(void *geom)
